feat: added initial files

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
 font_family	Liga SFMono Nerd Font
 
-font_size 9
+font_size 10
 # adjust_column_width 1
 
 disable_ligatures cursor
@@ -26,43 +26,43 @@ enable_audio_bell no
 
 remember_window_size no
 
-window_padding_width 20.0
+window_padding_width 30.0
 
 foreground            #f0f0f0
-background            #0f0f0f
+background            #0C0E0F
 selection_foreground  #262626
 selection_background  #f0f0f0
 url_color             #c6a679
 #background_opacity  0.98
 
 # black
-color8   #262626
-color0   #4c4c4c
+color8   #232526
+color0   #2C2E2F
 
 # red
-color1   #ac8a8c
-color9   #c49ea0
+color1   #DF5B61
+color9   #E8646A
 
 # green
-color2   #8aac8b
-color10  #9ec49f
+color2   #78B892
+color10  #81C19B
 
 # yellow
-color3   #aca98a
-color11  #c4c19e
+color3   #DE8F78
+color11  #E79881
 
 # blue
-color4  #8f8aac
-color12 #a39ec4
+color4  #6791C9
+color12 #709AD2
 
 # magenta
-color5   #ac8aac
-color13  #c49ec4
+color5   #BC83E3
+color13  #C58CEC
 
 # cyan
-color6   #8aacab
-color14  #9ec3c4
+color6   #67AFC1
+color14  #70B8CA
 
 # white
-color15   #e7e7e7
-color7  #f0f0f0
+color15   #E4E6E7
+color7  #F2F4F5
