--- a/herbstluftwm/theme/polybar/colors.ini
+++ b/herbstluftwm/theme/polybar/colors.ini
@@ -8,7 +8,7 @@ BACKGROUND = #161719
 FOREGROUND = #D8D8D8
 ALTBACKGROUND = #404040
 ALTFOREGROUND = #808080
-ACCENT = #B4A1DB
+ACCENT = #68757D
 
 BLACK = #1e222a
 RED = #e06c75
