--- a/herbstluftwm/theme/polybar/config.ini
+++ b/herbstluftwm/theme/polybar/config.ini
@@ -137,15 +137,17 @@ font-4 = "Iosevka:style=bold:size=11;5"
 ; Archcraft
 font-5 = "archcraft:size=12;4"
 
+font-6 = "Iosevka Nerd Font:size=16;4"
+
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
 ;   modules-center = xwindow xbrightness
 ;   modules-right = ipc clock
 
 # Default
-modules-left = dot dot dot herbwm
+modules-left = dot dot dot menu bar herbwm
 modules-center = date
-modules-right = volume dot brightness dot battery bar bluetooth network dot dot dot
+modules-right = volume bar brightness bar battery bar bluetooth bar network dot dot dot
 
 # Alternate
 ;modules-left = openbox 2LD cpu 3LD memory 4LD filesystem 5LD
