--- a/herbstluftwm/theme/polybar/modules.ini
+++ b/herbstluftwm/theme/polybar/modules.ini
@@ -145,6 +145,7 @@ card = ${system.sys_graphics_card}
 
 enable-scroll = true
 
+label = %percentage%
 ; Available tags:
 ;   <label> (default)
 ;   <ramp>
@@ -155,7 +156,6 @@ format-padding = 1
 
 ; Available tokens:
 ;   %percentage% (default)
-label = %percentage%%
 
 ; Only applies if <ramp> is used
 
@@ -207,7 +207,7 @@ time-format = %H:%M
 ;   <ramp-capacity>
 ;   <animation-charging>
 format-charging = <animation-charging> <label-charging>
-format-charging-prefix = " "
+format-charging-prefix = ""
 format-charging-prefix-font = 1
 format-charging-prefix-foreground = ${color.FOREGROUND}
 format-charging-background = ${color.BACKGROUND}
@@ -260,11 +260,11 @@ ramp-capacity-foreground = ${color.FOREGROUND}
 ramp-capacity-font = 2
 
 ; Only applies if <animation-charging> is used
-animation-charging-0 = 󰁺
-animation-charging-1 = 󰁼
-animation-charging-2 = 󰁾
-animation-charging-3 = 󰂁
-animation-charging-4 = 󰁹
+animation-charging-0 = 󰢜
+animation-charging-1 = 󰂇
+animation-charging-2 = 󰢝
+animation-charging-3 = 󰂊
+animation-charging-4 = 󰂅
 animation-charging-foreground = ${color.FOREGROUND}
 animation-charging-font = 2
 animation-charging-framerate = 700
@@ -690,12 +690,12 @@ format-disconnected-padding = 1
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
 ;label-connected = "%essid%  %downspeed%"
-label-connected = "connected"
+label-connected = ""
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
-label-disconnected = "offline"
+label-disconnected = ""
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
@@ -718,6 +718,8 @@ ramp-signal-3 = 󰤥
 ramp-signal-4 = 󰤨
 ramp-signal-foreground = ${color.FOREGROUND}
 ramp-signal-font = 2
+
+click-left = ~/.config/herbstluftwm/scripts/network_menu &
 
 ; Only applies if <animation-packetloss> is used
 ;;animation-packetloss-0 = ⚠
@@ -973,11 +975,11 @@ enable-scroll = true
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = 1;I
-icon-1 = 2;II
-icon-2 = 3;III
-icon-3 = 4;IV
-icon-4 = 5;V
+icon-0 = 1;1
+icon-1 = 2;2
+icon-2 = 3;3
+icon-3 = 4;4
+icon-4 = 5;5
 icon-default = 
 
 ; Available tags:
@@ -1008,7 +1010,7 @@ label-active-foreground = ${color.BLUE}
 ;   %index%
 ; Default: %icon%  %name%
 label-occupied = %icon%
-label-occupied-foreground = ${color.WHITE}
+label-occupied-foreground = ${color.ACCENT}
 ;;label-occupied-underline = ${color.BGA}
 
 ; Available tokens:
@@ -1038,13 +1040,13 @@ label-empty-padding = 1
 [module/menu]
 type = custom/text
 
-content = 
+content = 󰀻
 content-font = 6
 ;content = 異
 ;content-font = 2
-content-background = ${color.ALTBACKGROUND}
-content-foreground = ${color.GREEN}
-content-padding = 0
+content-background = ${color.BACKGROUND}
+content-foreground = ${color.FOREGROUND}
+content-padding = 2
 
 click-left = ~/.config/herbstluftwm/scripts/rofi_launcher
 ;;click-middle = path_to_script
@@ -1070,8 +1072,9 @@ click-left = ~/.config/herbstluftwm/scripts/rofi_powermenu
 
 [module/bar]
 type = custom/text
-content = 
+content = 
 content-padding = 1
+content-foreground = #808080
 content-font = 4
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
