--- a/herbstluftwm/theme/polybar/config.ini
+++ b/herbstluftwm/theme/polybar/config.ini
@@ -183,14 +183,14 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = center
+tray-position = right
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
 tray-detached = false
 
 ; Tray icon max size
-tray-maxsize = 16
+tray-maxsize = 14
 
 ; DEPRECATED! Since 3.3.0 the tray always uses pseudo-transparency
 ; Enable pseudo transparency
